--- a/src/components/Avatar/Avatar.modules.css
+++ b/src/components/Avatar/Avatar.modules.css
@@ -1,3 +1,7 @@
+:root {
+    --covered-portion: .5;
+}
+
 .avatar-container {
     width: 100%;
     background-color: transparent;
@@ -20,7 +24,7 @@
 }
 
 .mask-front {
-    height: 142.85%;
+    height: calc(100%/var(--covered-portion) + 2.85%);
     position: absolute;
     bottom: 0px;
 }
@@ -29,7 +33,7 @@
     width: 100%;
     position: absolute;
     background-color: transparent;
-    height: 70%;
+    height: calc(100% * var(--covered-portion));
     overflow: hidden;
     bottom: -1px;
     left: 0px;
